<resources>
    <string name="app_name">login</string>
    <string name="title_activity_login">Sign in</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_name">Name</string>
    <string name="prompt_surname">Surname</string>
    <string name="prompt_username">Username</string>
    <string name="prompt_address">Address</string>
    <string name="prompt_phone">Phone Number</string>
    <string name="prompt_birth">Birth Date</string>
    <string name="prompt_activation_code">Activation Code</string>
    <string name="send_activation_code">Send to SMS</string>
    <string name="register">Register</string>
</resources>
